--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require-dev": {
+        "phpstan/phpstan": "1.11.x-dev"
+    }
 }
